--- a/Academy-2024/appsettings.Development.json
+++ b/Academy-2024/appsettings.Development.json
@@ -6,7 +6,7 @@
     }
   },
   "ConnectionStrings": {
-    "ApplicationDbContext": "Data Source=C:\\Users\\user\\AppData\\Local\\academy.db"
+    "ApplicationDbContext": "Data Source=C:\\Users\\Bence\\AppData\\Local\\academy.db"
   },
   "Jwt": {
     "Key": "attrecto_aa_secret_key_that_is_long_enough",
